--- a/TeachersStudensQAForum_frontend/teachers-student-forum/package.json
+++ b/TeachersStudensQAForum_frontend/teachers-student-forum/package.json
@@ -3,13 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
+    "@mui/x-date-pickers": "^6.11.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "formik": "^2.4.5",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-secure-storage": "^1.3.0",
+    "recharts": "^2.8.0",
+    "sweetalert2": "^11.7.27",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,7 +38,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "globals": {
+      "google": "readonly"
+    }
   },
   "browserslist": {
     "production": [
